namespaces/monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: grafana

spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: grafana
    template:
        metadata:
            labels:
                app: grafana
        spec:
            enableServiceLinks: false
            containers:
                - name: grafana
                  image: grafana/grafana:latest
                  ports:
                      - name: http
                        containerPort: 3000
                  volumeMounts:
                      - name: grafana
                        mountPath: /var/lib/grafana
                      - name: grafana-datasources
                        mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
                        subPath: datasources.yaml
                        readOnly: true
                      - name: grafana-alerting
                        mountPath: /etc/grafana/provisioning/alerting/alerting.yaml
                        subPath: alerting.yaml
                        readOnly: true
            volumes:
                - name: grafana
                  hostPath:
                      path: /var/data/local/grafana
                      type: Directory
                - name: grafana-datasources
                  configMap:
                      name: grafana-datasources
                - name: grafana-alerting
                  configMap:
                      name: grafana-alerting
