namespaces/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service

metadata:
    name: grafana

spec:
    selector:
        app: grafana
    ports:
        - name: http
          port: 3000
          targetPort: http
    type: ClusterIP
