namespaces/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: grafana
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
    ingressClassName: traefik
    rules:
        - host: grafana.wacky.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: grafana
                            port:
                                name: http
